--- a/style.css
+++ b/style.css
@@ -72,7 +72,9 @@ h1 {
 }
 
 .profile-pic {
-    width: 150px;
+    width: 120px;
+    height: 120px;
+    object-fit: cober;
     border-radius: 50%;
     box-shadow: 0 4px 10px rgba(0,0,0,0.1);
 }
